fix: sections spacing + title margin when clicked in anchor

--- a/src/styles/components/_items.scss
+++ b/src/styles/components/_items.scss
@@ -37,7 +37,7 @@
       z-index: 2;
 
       @include media("<=phone") {
-        top: 0;
+        top: 7px;
       }
     }
   }
