--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -18,17 +18,22 @@ body {
   }
 
   section {
-    height: calc(100vh - 12rem);
+    // min-height: calc(100vh - 12rem);
     max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 4rem 0;
 
     @include media("<=phone") {
-      padding: 0 2.5rem;
+      padding: 0 2rem;
       height: auto;
-      margin: 3.5rem 0;
+      margin: 4rem 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
     }
   }
 }
