--- a/src/styles/typography/_titles.scss
+++ b/src/styles/typography/_titles.scss
@@ -2,6 +2,11 @@
   font-size: var(--fs-xl);
   margin: 0.5rem 0;
   color: $color-primary;
+  margin-top: 5rem;
+
+  @include media("<=phone") {
+    margin-top: 2rem;
+  }
 }
 
 .title-2--container {
@@ -14,6 +19,11 @@
   gap: 1.25rem;
   padding: 1rem;
   margin-bottom: 1.85rem;
+  margin-top: 5rem;
+
+  @include media("<=phone") {
+    margin-top: 2rem;
+  }
 }
 
 .title-2 {
